--- a/FrontendExam/users/login.html
+++ b/FrontendExam/users/login.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <!-- Bootstrap CSS -->
+
+        <!-- CSS FILES -->        
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
-  <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +28,10 @@
 
 <body>
     <div class="container my-5">
+         <div style="display: inline;"> <a class="navbar-brand" style="color: #E76F40; margin:40px;" href="../index.php">
+                /<span>Home</span>
+            </a>
+        </div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <h1 class="text-center mb-4">Login</h1>
