--- a/FrontendExam/users/register.html
+++ b/FrontendExam/users/register.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-
-    <!-- Bootstrap CSS -->
+    
+    <!-- CSS FILES -->     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-  <!-- CSS FILES -->        
+    <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,11 +21,14 @@
 
         <link href="../css/templatemo-ebook-landing.css" rel="stylesheet">
 
-
 </head>
 
 <body>
     <div class="container my-5">
+         <div style="display: inline;"> <a class="navbar-brand" style="color: #E76F40; margin:40px;" href="../index.php">
+                /<span>Home</span>
+            </a>
+        </div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <h1 class="text-center mb-4">Register</h1>
@@ -42,6 +44,8 @@
                     <div class="mb-3">
                         <label for="password" class="form-label">Password:</label>
                         <input type="password" name="password" class="form-control" id="password">
+                            <!-- <i class="bi bi-eye-slash" id="togglePassword2"></i> -->
+
                     </div>
                     <div class="mb-3">
                         <label for="role" class="form-label">Role:</label>
